objects/PEPE_Training_Request__c.object
<CustomObject>
    <fields>
        <fullName>CI_Modified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Modified_date__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>CVENT Modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Template_Name__c</fullName>
        <description>Field created part of FY15 Apr release for PEPE Java application</description>
        <label>Template Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_it_Multi_session_event__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACI Fabric Operations Continued (1-day) – Template [2DE1D545-6963-4ECC-8B3C-D60478F0A703]</fullName>
                </value>
                <value>
                    <fullName>Cisco ACI Migration FastPath, NIL [0173C73B-F55C-435D-BB80-10FDFBE83701]</fullName>
                </value>
                <value>
                    <fullName>Cisco DevNet Express Workshop [5074BB7F-E1AB-4D9B-BF6F-8AA18837F3E7]</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE Enterprise Cloud Suite - Sales Training (1-day) - Template [4095F4D6-C738-4291-B84B-04D49A5BFCBC]</fullName>
                </value>
                <value>
                    <fullName>Cisco ONE Enterprise Cloud Suite – Technical Bootcamp (3-day) - Template [B21FC72F-887C-42C9-AFD6-94D333B53CE5]</fullName>
                </value>
                <value>
                    <fullName>Cisco Partner Business Transformation Workshop, City - Date [C5E8113F-4C61-4CC0-A07F-955D7D9525B4]</fullName>
                </value>
                <value>
                    <fullName>Cisco Stealthwatch - Deployment [D6941CB5-39D7-4238-98B2-CB01437C3412]</fullName>
                </value>
                <value>
                    <fullName>Cisco Web Security Solutions (on Premise, Cloud, Hybrid) (CWSS) [A625D784-2013-467F-B9CF-748810FCBF85] {PP}</fullName>
                </value>
                <value>
                    <fullName>Cisco Workload Optimization Manager (Turbonomic) 1-day Technical Workshop [4599F90A-2E42-429C-8536-6B28EFC99BCA]</fullName>
                </value>
                <value>
                    <fullName>Delivering customer success with hybrid cloud using Cloud Automation Strategy Workshop – Template [DDCBF398-4723-4C83-9FAF-9E9112290B16]</fullName>
                </value>
                <value>
                    <fullName>EN - Airmagnet Site survey training [D557CC9D-9126-4247-869B-192710B85A5C]</fullName>
                </value>
                <value>
                    <fullName>EN - Catalyst 9k and DNA Center Programmability Workshop [469A5F8B-52EF-42A9-9B20-D406D00F4E8A]</fullName>
                </value>
                <value>
                    <fullName>EN - Cisco Partner DNA Technical Workshop [4507EEDB-E94F-4052-871A-789F7E87DAF1]</fullName>
                </value>
                <value>
                    <fullName>EN - Cisco Software Defined Access (SDA) [87292D31-9EBA-4DBC-AC81-D96936B85154]</fullName>
                </value>
                <value>
                    <fullName>EN - CMX partner training for Ses [821af0d8-2600-4813-aec4-3bad9733e588]</fullName>
                </value>
                <value>
                    <fullName>EN - Ekahau Site Survey Training[E3D63F69-D217-41B9-AFEC-F3628FBAF11D]</fullName>
                </value>
                <value>
                    <fullName>EN - Implementing Cisco Secure Access Solutions Training [39F0E7EA-85C7-4DE8-96F6-FAB7B3471E43]</fullName>
                </value>
                <value>
                    <fullName>EN - Master Class - Enterprise SDN [A49193EC-9B97-434F-8123-0B968E316128]</fullName>
                </value>
                <value>
                    <fullName>EN - Network intuitive workshop [8863B757-841A-44B9-9A96-A1C0E0F35364]</fullName>
                </value>
                <value>
                    <fullName>EN - Network intuitive workshop - internal [ADE2D1D4-F312-4894-91FB-71CAAC2C7B55]</fullName>
                </value>
                <value>
                    <fullName>EN - Network intuitive workshop - MS (partners) [C70B4EA1-A8E6-4934-9F9A-74D838F074C1]</fullName>
                </value>
                <value>
                    <fullName>EN - Partner EMEAR DNA Workshop [55D83A54-4DD9-493D-A7A9-2625544C4CEE]</fullName>
                </value>
                <value>
                    <fullName>EN - Positioning ISE for SDA [384EAC44-B72F-4494-B5C9-064097A98C65]</fullName>
                </value>
                <value>
                    <fullName>EN - SD-WAN POC Training [557BD21F-B917-4780-82B6-6B3AB852D22D]</fullName>
                </value>
                <value>
                    <fullName>EN - Self Drive Automation and Orchestration with APIC-EM[31E7359C-E815-475E-BAAD-3C74D6950D0D]</fullName>
                </value>
                <value>
                    <fullName>EN - Self Drive - Cisco Connected Mobile Experience (CMX) [00C5F09D-95F9-416D-BA44-A1D5739B7709]</fullName>
                </value>
                <value>
                    <fullName>EN - Self Drive - CyberThreat Defense: Networks as a Sensor / Enforcer [58339AC6-F292-4017-BA87-1730B190554D]</fullName>
                </value>
                <value>
                    <fullName>EN - SelfDrive - DNA Center Automation and Analytics [9EDA34E3-58E3-459C-9182-7CD7146A6C31]</fullName>
                </value>
                <value>
                    <fullName>EN - Self Drive - DNA Secure Mobility [7BDAE68E-54E8-41FB-9822-5D0A25B90566]</fullName>
                </value>
                <value>
                    <fullName>EN - Self Drive for SD-WAN [BD4A0461-5971-4A77-AC0E-A0EF51765CAD]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLC_Claimed_by_Learning_Partner__c</fullName>
        <description>Under Financial Services, Cisco learning Credit claimed by  Learning Partner</description>
        <label>CLC Claimed by Learning Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLC_Issued__c</fullName>
        <description>Under Financial Details, Cisco Learning Credit issued is entered.</description>
        <label>CLC Issued</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLP_flag__c</fullName>
        <label>CLP Eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <description>Customer Satisfaction score received from the training participants once it was executed. The score is fetched from training survey.</description>
        <inlineHelpText>Updated from Learning Partner.
Score can be between 0 to 5 with 2 decimal places,  such as 0.50 or 4.99 or 5.00</inlineHelpText>
        <label>CSAT Score</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVENT_Created_Date__c</fullName>
        <description>Field contains date of CVENT creation.</description>
        <label>CVENT Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CVENT_Created__c</fullName>
        <description>Will provide either Y/N on CVENT record availability</description>
        <label>CVENT Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CVENT_Date_Field_Comparision__c</fullName>
        <description>Field created to compare CVENT date fields and same need to use in SOQL</description>
        <formula>IF(DATETIMEVALUE(TE_Last_Modified_date__c) &gt; DATETIMEVALUE(CI_Created_date__c) || 
DATETIMEVALUE(LastModifiedDate) &gt; DATETIMEVALUE(CI_Created_date__c) || 
DATETIMEVALUE(TE_Last_Modified_date__c) &gt; DATETIMEVALUE(CI_Modified_date__c) || 
DATETIMEVALUE(LastModifiedDate) &gt; DATETIMEVALUE(CI_Modified_date__c), true, false)</formula>
        <label>CVENT Date Field Comparision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVENT_Status__c</fullName>
        <description>This field will indicate the CVENT status for the TR.</description>
        <label>CVENT Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catering_Vendor_Agency_Cost__c</fullName>
        <description>Cost towards local agency catering service</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Catering Vendor/ Agency Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cisco_Location__c</fullName>
        <description>Please insert "Country [City], eg Netherlands [Amsterdam]”</description>
        <inlineHelpText>Please insert "Country [City], eg Netherlands [Amsterdam]”</inlineHelpText>
        <label>Cisco Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_PO_Number__c</fullName>
        <description>The PO number raised by PLED admin team to the Logistics and Operations Team confirming them to proceed with the event.</description>
        <label>Cisco PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City value is entered here</description>
        <label>City (Do not use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Adding training requests comments</description>
        <label>Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Creation_Date__c</fullName>
        <description>Date when the Training Event was created</description>
        <formula>Training_Offering_Id__r.Content_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <description>Person who creates the Master Event</description>
        <formula>TEXT( Training_Offering_Id__r.Content_Owner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_TSR__c</fullName>
        <description>This counts TSR records for the pvt and used for approval process vlaidations</description>
        <label>Count TSR</label>
        <summaryFilterItems>
            <field>PEPE_Training_Sessions_Requested__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>PVT</value>
        </summaryFilterItems>
        <summaryForeignKey>PEPE_Training_Sessions_Requested__c.Training_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Cluster__c</fullName>
        <description>Country cluster which the event is set up for.</description>
        <label>Country Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theatre_Region__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRICA_OP</fullName>
                </value>
                <value>
                    <fullName>AFRICA_OP_SOUTHAFRICA</fullName>
                </value>
                <value>
                    <fullName>All Clusters</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BELUX_OPS</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cansac</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>DENMARK_OPS</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>EMEA-CEE</fullName>
                </value>
                <value>
                    <fullName>EMEA-CEE-POLAND</fullName>
                </value>
                <value>
                    <fullName>EMEA-FRANCE</fullName>
                </value>
                <value>
                    <fullName>EMEA-GERMANY</fullName>
                </value>
                <value>
                    <fullName>EMEA-ITALY</fullName>
                </value>
                <value>
                    <fullName>EMEA-KSA</fullName>
                </value>
                <value>
                    <fullName>EMEA-POLAND</fullName>
                </value>
                <value>
                    <fullName>EMEA-SEE</fullName>
                </value>
                <value>
                    <fullName>EMEA-SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>EMEA-UKI</fullName>
                </value>
                <value>
                    <fullName>ESTONIA_OPS</fullName>
                </value>
                <value>
                    <fullName>Eucador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Event_Host__c</fullName>
        <description>Host enter the details for his/her for the event and admin information</description>
        <label>Country Event Host</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Registration_Owner__c</fullName>
        <description>Registration owner details are entered here.</description>
        <label>Country Registration Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country within the country cluster which the training is set up for. The country selection is done by Regional leads at the time of selecting the events</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Cluster__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DW_Cost__c</fullName>
        <inlineHelpText>Cost of the Derivate works</inlineHelpText>
        <label>DW Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DW_ID__c</fullName>
        <formula>Training_Offering_Id__r.DW_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_by_Local_Learning_Partner__c</fullName>
        <description>This field will provide the addition information regarding the Delivery by Local Learning Partner. (Yes/ No)</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Delivered by Local Learning Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date_From__c</fullName>
        <description>This field displays the 'Delivery Date From' selected in Parent Training Event.</description>
        <formula>Training_Offering_Id__r.Delivery_Date_From__c</formula>
        <label>Delivery Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_To__c</fullName>
        <description>This field displays the 'Delivery Date To' selected in Parent Training Event.</description>
        <formula>Training_Offering_Id__r.Delivery_Date_To__c</formula>
        <label>Delivery Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Team__c</fullName>
        <description>Team who will deliver the training (if Cisco)</description>
        <formula>Training_Offering_Id__r.Delivery_Team_Selected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Defines how the training will be delivered? It can either be Instructor-led or Virtual</description>
        <formula>TEXT(Training_Offering_Id__r.Delivery_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_in_Preferred_Language__c</fullName>
        <description>This will allow user to provide option in case he wants Delivery in Preferred Language.</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Delivery in Preferred Language?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_want_a_TP_Web_Ex__c</fullName>
        <label>Do you want a TP\Web Ex ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TP</fullName>
                </value>
                <value>
                    <fullName>Web Ex</fullName>
                </value>
                <value>
                    <fullName>TP and Webex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_Unit__c</fullName>
        <description>This is on TE and is used for CVENT Integration</description>
        <formula>TEXT(Training_Offering_Id__r.Duration_Unit__c)</formula>
        <label>Duration Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Value__c</fullName>
        <description>TE Training duration values used in Cvent integration</description>
        <formula>Training_Offering_Id__r.Duration_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXT_URL__c</fullName>
        <description>This field has the Java BLP Portal URL for sending TR links in Email to the BLPs. The URLs changed dynamically based on platform</description>
        <formula>IF(Platform__c ='Architectures', 'https://pepe.cloudapps.cisco.com/BLP/PEPEBLP.htm?platform=ARCH&amp;TR='+Name , 'https://pepe.cloudapps.cisco.com/BLP/PEPEBLP.htm?platform=PP&amp;TR='+Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EXT URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_ARCH__c</fullName>
        <description>The end date is for Arch remote..</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <formula>Training_Offering_Id__r.End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimation_Training_Cost__c</fullName>
        <description>Cost of training execution</description>
        <formula>Training_Offering_Id__r.Estimated_Training_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimation Training Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone_Code_01__c</fullName>
        <description>Created part of May FY15 release to use in PEPE BLP Java application</description>
        <formula>Training_Offering_Id__r.Event_Time_Zone_Code_01__c</formula>
        <label>Event Time Zone Code 01</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone_Code_02__c</fullName>
        <description>Created part of May FY15 release to use in PEPE BLP Java application</description>
        <formula>Training_Offering_Id__r.Event_Time_Zone_Code_02__c</formula>
        <label>Event Time Zone Code 02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Zone__c</fullName>
        <description>Created part of May FY15 release to use in PEPE BLP Java application</description>
        <formula>TEXT(Training_Offering_Id__r.Event_Time_Zone__c)</formula>
        <label>Event Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_link_from_CVENT__c</fullName>
        <defaultValue>"www.cisco.com"</defaultValue>
        <description>Event link URL copied from CVENT</description>
        <label>Event link from CVENT</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Application_URL__c</fullName>
        <defaultValue>'https://pepe.cloudapps.cisco.com/BLP/PEPEBLP.htm?'</defaultValue>
        <description>This will hold the url for external java application.</description>
        <label>External Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <description>Fiscal Quarter</description>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY19 Q1 - 07/29 - 10/27</fullName>
                </value>
                <value>
                    <fullName>FY19 Q2 - 10/28 - 01/26</fullName>
                </value>
                <value>
                    <fullName>FY19 Q3 - 01/27 - 04/27</fullName>
                </value>
                <value>
                    <fullName>FY19 Q4 - 04/28 - 07/27</fullName>
                </value>
                <value>
                    <fullName>FY20 Q1 - 07/28 - 10/26</fullName>
                </value>
                <value>
                    <fullName>FY20 Q2 - 10/27 - 01/25</fullName>
                </value>
                <value>
                    <fullName>FY20 Q3 - 01/26 - 04/25</fullName>
                </value>
                <value>
                    <fullName>FY20 Q4 - 04/26 - 07/25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Source of funding is entered</description>
        <label>Funding Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_TE__c</fullName>
        <description>Created part of BLP project</description>
        <formula>TEXT(Training_Offering_Id__r.Geography__c)</formula>
        <label>Geography TE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geography</description>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEAR</fullName>
                    <default>true</default>
                    <label>EMEAR</label>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Email_ID__c</fullName>
        <description>Host email id is provided here.</description>
        <label>Host Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Host_Phone__c</fullName>
        <description>This will provide the Host Phone # from related Training Request.</description>
        <label>Host Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Instructor_Email__c</fullName>
        <description>Captures Instructor Email</description>
        <label>Instructor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Instructor_Names__c</fullName>
        <description>Name of the Instructor(s) from the Learning Partner company who will facilitate the training</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Instructor Name(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructors_Contact_Details__c</fullName>
        <description>Contact details of the Instructor(s) from the Learning Partner company who will facilitate the training</description>
        <inlineHelpText>Updated from Learning Partner</inlineHelpText>
        <label>Instructor(s) Contact Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>This field holds the Internal Notes</description>
        <label>Internal Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Value__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>Invoice Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_it_Multi_session_event__c</fullName>
        <label>Is it Multi-session event?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Joining_Virtually__c</fullName>
        <label>Joining Virtually?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact_Email__c</fullName>
        <description>Key contact details are provided here</description>
        <label>Key Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Name__c</fullName>
        <description>Key contact details are provided here</description>
        <inlineHelpText>Displays the Event details when this field values is set to “Yes” or Displays the Session details when field value set to “No” + Publish to Calendar? is set to “Yes”</inlineHelpText>
        <label>Show data at event level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Publish_to_Calendar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Coverage_TE__c</fullName>
        <description>Created part of May FY15 release to use in PEPE BLP Java application</description>
        <formula>Training_Offering_Id__r.Language_Coverage_Selected__c</formula>
        <label>Language Coverage TE</label>
        <type>Text</type>
    </fields>
</CustomObject>